--- a/hyperparams/ppo.yml
+++ b/hyperparams/ppo.yml
@@ -4,7 +4,7 @@ PandaReach-v3:
   n_timesteps: !!float 1e6
   policy: 'MlpPolicy'
   n_steps: 16
-  batch_size: 2**8
+  batch_size: 256
   gae_lambda: 0.95
   gamma: 0.99
   n_epochs: 10
@@ -16,7 +16,7 @@ PandaPush-v3:
   n_timesteps: !!float 1e6
   policy: 'MlpPolicy'
   n_steps: 16
-  batch_size: 2**8
+  batch_size: 256
   gae_lambda: 0.95
   gamma: 0.99
   n_epochs: 10
@@ -28,7 +28,7 @@ PandaSlide-v3:
   n_timesteps: !!float 1e6
   policy: 'MlpPolicy'
   n_steps: 16
-  batch_size: 2**8
+  batch_size: 256
   gae_lambda: 0.95
   gamma: 0.99
   n_epochs: 10
@@ -41,7 +41,7 @@ PandaPickAndPlace-v3:
   n_timesteps: !!float 1e6
   policy: 'MlpPolicy'
   n_steps: 16
-  batch_size: 2**8
+  batch_size: 256
   gae_lambda: 0.95
   gamma: 0.99
   n_epochs: 10
@@ -55,7 +55,7 @@ PandaReachDense-v3:
   n_timesteps: !!float 1e6
   policy: 'MlpPolicy'
   n_steps: 16
-  batch_size: 2**8
+  batch_size: 256
   gae_lambda: 0.95
   gamma: 0.99
   n_epochs: 10
@@ -67,7 +67,7 @@ PandaPushDense-v3:
   n_timesteps: !!float 1e6
   policy: 'MlpPolicy'
   n_steps: 16
-  batch_size: 2**8
+  batch_size: 256
   gae_lambda: 0.95
   gamma: 0.99
   n_epochs: 10
@@ -79,7 +79,7 @@ PandaSlideDense-v3:
   n_timesteps: !!float 1e6
   policy: 'MlpPolicy'
   n_steps: 16
-  batch_size: 2**8
+  batch_size: 256
   gae_lambda: 0.95
   gamma: 0.99
   n_epochs: 10
@@ -92,7 +92,7 @@ PandaPickAndPlaceDense-v3:
   n_timesteps: !!float 1e6
   policy: 'MlpPolicy'
   n_steps: 16
-  batch_size: 2**8
+  batch_size: 256
   gae_lambda: 0.95
   gamma: 0.99
   n_epochs: 10
