--- a/hyperparams/ddpg.yml
+++ b/hyperparams/ddpg.yml
@@ -18,9 +18,9 @@ Pendulum-v1:
   learning_rate: !!float 1e-3
   policy_kwargs: "dict(net_arch=[400, 300])"
 
-LunarLanderContinuous-v2:
+PandaPickAndPlaceDense-v3:
   n_timesteps: !!float 3e5
-  policy: 'MlpPolicy'
+  policy: 'MultiInputPolicy'
   gamma: 0.98
   buffer_size: 200000
   learning_starts: 10000
