--- a/hyperparams/td3.yml
+++ b/hyperparams/td3.yml
@@ -18,9 +18,22 @@ Pendulum-v1:
   learning_rate: !!float 1e-3
   policy_kwargs: "dict(net_arch=[400, 300])"
 
-LunarLanderContinuous-v2:
+PandaReach-v3:
   n_timesteps: !!float 3e5
-  policy: 'MlpPolicy'
+  policy: 'MultiInputPolicy'
+  gamma: 0.98
+  buffer_size: 200000
+  learning_starts: 10000
+  noise_type: 'normal'
+  noise_std: 0.1
+  gradient_steps: -1
+  train_freq: [1, "episode"]
+  learning_rate: !!float 1e-3
+  policy_kwargs: "dict(net_arch=[400, 300])"
+
+PandaReachDense-v3:
+  n_timesteps: !!float 3e5
+  policy: 'MultiInputPolicy'
   gamma: 0.98
   buffer_size: 200000
   learning_starts: 10000
