--- a/hyperparams/ddpg.yml
+++ b/hyperparams/ddpg.yml
@@ -54,7 +54,7 @@ PandaReachDense-v3:
   noise_type: 'normal'
   noise_std: 0.1
   gradient_steps: -1
-  train_freq: [1, "future"] # Ist das hier von HER? Dann lieber future!
+  train_freq: [1, "episode"]
   learning_rate: !!float 0.001
   policy_kwargs: "dict(net_arch=[400, 300])"
 
@@ -67,7 +67,7 @@ PandaPickAndPlaceDense-v3:
   noise_type: 'normal'
   noise_std: 0.1
   gradient_steps: -1
-  train_freq: [1, "future"] # Ist das hier von HER? Dann lieber future!
+  train_freq: [1, "episode"]
   learning_rate: !!float 0.001
   policy_kwargs: "dict(net_arch=[400, 300])"
   
