--- a/hyperparams/ddpg.yml
+++ b/hyperparams/ddpg.yml
@@ -9,6 +9,7 @@ PandaReach-v3:
   gradient_steps: -1
   train_freq: [1, "episode"]
   learning_rate: !!float 1e-3
+  replay_buffer_class: HerReplayBuffer
   policy_kwargs: "dict(net_arch=[400, 300])"
 
 PandaReachDense-v3:
@@ -22,6 +23,7 @@ PandaReachDense-v3:
   gradient_steps: -1
   train_freq: [1, "episode"]
   learning_rate: !!float 1e-3
+  replay_buffer_class: HerReplayBuffer
   policy_kwargs: "dict(net_arch=[400, 300])"
 
 PandaPickAndPlace-v3:
@@ -35,6 +37,7 @@ PandaPickAndPlace-v3:
   gradient_steps: -1
   train_freq: [1, "episode"]
   learning_rate: !!float 0.001
+  replay_buffer_class: HerReplayBuffer
   policy_kwargs: "dict(net_arch=[400, 300])"
 
 PandaPickAndPlaceDense-v3:
@@ -48,6 +51,7 @@ PandaPickAndPlaceDense-v3:
   gradient_steps: -1
   train_freq: [1, "episode"]
   learning_rate: !!float 0.001
+  replay_buffer_class: HerReplayBuffer
   policy_kwargs: "dict(net_arch=[400, 300])"
   
 
@@ -64,6 +68,7 @@ PandaReachJoints-v3:
   gradient_steps: -1
   train_freq: [1, "episode"]
   learning_rate: !!float 1e-3
+  replay_buffer_class: HerReplayBuffer
   policy_kwargs: "dict(net_arch=[400, 300])"
 
 
@@ -78,4 +83,5 @@ PandaReachJointsDense-v3:
   gradient_steps: -1
   train_freq: [1, "episode"]
   learning_rate: !!float 1e-3
+  replay_buffer_class: HerReplayBuffer
   policy_kwargs: "dict(net_arch=[400, 300])"
