--- a/hyperparams/ppo.yml
+++ b/hyperparams/ppo.yml
@@ -85,7 +85,7 @@ PandaSlideDense-v3:
   n_epochs: 10
   ent_coef: 0.0
 
-  
+"""  
 PandaPickAndPlaceDense-v3:
   normalize: true
   n_envs: 16
@@ -98,7 +98,7 @@ PandaPickAndPlaceDense-v3:
   n_epochs: 10
   ent_coef: 0.0
 
-
+"""
 
 
 PandaReachJoints-v3:
@@ -128,3 +128,22 @@ PandaReachJointsDense-v3:
   gamma: 0.99
   n_epochs: 10
   ent_coef: 0.0
+
+
+
+
+#Hyperparametertuning
+
+PandaPickAndPlaceDense-v3:
+  normalize: true
+  learning_rate: 0.00066
+  policy: 'MultiInputPolicy'
+  n_steps: 16
+  batch_size: 2048
+  gae_lambda: 0.9
+  gamma: 0.9
+  n_epochs: 10
+  ent_coef: 0.00286
+  activation_fn: 'relu'
+  net_arch: "medium"
+
