--- a/hyperparams/ppo.yml
+++ b/hyperparams/ppo.yml
@@ -144,6 +144,7 @@ PandaPickAndPlaceDense-v3:
   gamma: 0.9
   n_epochs: 10
   ent_coef: 0.00286
-  activation_fn: 'relu'
-  net_arch: "medium"
+  #activation_fn: 'relu'
+  #net_arch: "medium"
+  n_timesteps: !!float 8e6
 
