--- a/hyperparams/sac.yml
+++ b/hyperparams/sac.yml
@@ -34,7 +34,7 @@ PandaSlideDense-v3:
   replay_buffer_class: HerReplayBuffer
   replay_buffer_kwargs: "dict( goal_selection_strategy='future', n_sampled_goal=4, )"
   policy_kwargs: "dict(net_arch=[64, 64])"
-
+"""
 PandaPickAndPlaceDense-v3:
   n_timesteps: !!float 1000000.0
   policy: 'MultiInputPolicy'
@@ -46,7 +46,7 @@ PandaPickAndPlaceDense-v3:
   replay_buffer_kwargs: "dict( goal_selection_strategy='future', n_sampled_goal=4, )"
   policy_kwargs: "dict(net_arch=[64, 64])"
 
-
+"""
 PandaReach-v3:
   n_timesteps: !!float 1000000.0
   policy: 'MultiInputPolicy'
@@ -115,3 +115,23 @@ PandaReachJoints-v3:
   replay_buffer_kwargs: "dict( goal_selection_strategy='future', n_sampled_goal=4, )"
   policy_kwargs: "dict(net_arch=[64, 64])"
 
+
+
+
+#Hyperparametertuning
+
+
+PandaPickAndPlaceDense-v3:
+  n_timesteps: !!float 1000000.0
+  policy: 'MultiInputPolicy'
+  buffer_size: 100000
+  batch_size: 1024
+  learning_rate: 0.00071
+  normalize: true
+  replay_buffer_class: HerReplayBuffer
+  replay_buffer_kwargs: "dict( goal_selection_strategy='future', n_sampled_goal=4, )"
+  policy_kwargs: "dict(net_arch=[64, 64])"
+  tau: 0.0005
+  log_std_init: -2.28698428949498
+  gamma: 0.995
+  train_freq: 64
